--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="menudesktop">
                 <nav>
                     <ul class="lista-menu">
-                        <li><a href="Dnd-Inicio.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="Dnd-Dados.html">Dados</a></li>
                         <li><a href="Dnd-Classes.html">Classes</a></li>
                         <li><a href="Dnd-Raças.html">Raças</a></li>
