--- a/Ficha3.html
+++ b/Ficha3.html
@@ -63,6 +63,20 @@
         </div>
     </header>
     <div class="geral">
+        <section class="escolhas">
+            <div data-janela="classe">
+                <p>CLASSE</p>
+            </div>
+            <div data-janela="raca">
+                <p>RAÇA</p>
+            </div>
+            <div data-janela="aparencia">
+                <p>APARENCIA</p>
+            </div>
+            <div data-janela="equipamento">
+                <p>EQUIPAMENTO</p>
+            </div>
+        </section>
         <div class="imagem-personagem"></div>
         <section class="personagem">
             <div data-janela="classe">
