--- a/teste.html
+++ b/teste.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customização</title>
-    <link rel="stylesheet" href="style-ficha.css">
+    <link rel="stylesheet" href="teste.css">
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,22 +63,22 @@
         </div>
     </header>
     <div class="geral">
-        <section class="escolhas">
-            <div id="classe">
+        <!-- <section class="escolhas">
+            <div data-janela="classe">
                 <p>CLASSE</p>
             </div>
-            <div id="raca">
+            <div data-janela="raca">
                 <p>RAÇA</p>
             </div>
-            <div id="aparencia">
+            <div data-janela="aparencia">
                 <p>APARENCIA</p>
             </div>
-            <div id="equipamento">
+            <div data-janela="equipamento">
                 <p>EQUIPAMENTO</p>
             </div>
-        </section>
+        </section> -->
         <div class="imagem-personagem"></div>
-        <!-- <section class="personagem">
+        <section class="personagem">
             <div class="classe">
                 <p>CLASSE</p>
             </div>
@@ -98,7 +98,7 @@
                 <p><a href="Ficha.html">VOLTAR</a></p>
             </div>
 
-        </section> -->
+        </section>
     </div>
     <script src="dados.js"></script>
     <script src="script.js"></script>
