--- a/Dnd-Dados.html
+++ b/Dnd-Dados.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body class="body-dados">
+<body class="-dados">
     <header id="topo-da-pagina">
         <div class="interface">
             <section class="logo">
