Editado na aula do hasan

--- a/Ficha3.html
+++ b/Ficha3.html
@@ -30,75 +30,98 @@
 
     <!--Essa pagina sera incluida no Tp2 por falta de tempo-->
 
-
-
-    <header id="topo-da-pagina">
-        <div class="interface">
-            <section class="logo">
-                <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU"><img
-                        src="imgs/3714923-middle-removebg-preview.png" alt="LOGO"></a>
-            </section>
-            <div class="mobile-menu"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                    width="24px" fill="#e8eaed">
-                    <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-                </svg></div>
-            <section class="menudesktop">
-                <nav>
-                    <ul class="lista-menu">
-                        <li><a href="Dnd-Inicio.html">Inicio</a></li>
-                        <li><a href="Dnd-Dados.html">Dados</a></li>
-                        <li><a href="Dnd-Classes.html">Classes</a></li>
-                        <li><a href="Dnd-Raças.html">Raças</a></li>
-                        <li><a href="Dnd-Lendas.html">Lendas</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section class="ficha">
-                <a href="Ficha.html">
-                    <button>
-                        Crie sua ficha
-                    </button>
-                </a>
-            </section>
-        </div>
-    </header>
     <div class="geral">
         <section class="escolhas">
-            <div id="classe">
-                <p>CLASSE</p>
-            </div>
-            <div id="raca">
-                <p>RAÇA</p>
-            </div>
-            <div id="aparencia">
-                <p>APARENCIA</p>
-            </div>
-            <div id="equipamento">
-                <p>EQUIPAMENTO</p>
-            </div>
+            <button id="flecha-menu-esquerda"><<<</button>
+                    <div id="classe">
+                        <p>CLASSE</p>
+                    </div>
+                    <div id="raca">
+                        <p>RAÇA</p>
+                    </div>
+                    <div id="aparencia">
+                        <p>APARENCIA</p>
+                    </div>
+                    <div id="equipamento">
+                        <p>EQUIPAMENTO</p>
+                    </div>
+                    <button id="flecha-menu-direita">>>></button>
         </section>
         <div class="imagem-personagem"></div>
-        <!-- <section class="personagem">
-            <div class="classe">
-                <p>CLASSE</p>
-            </div>
-            <div class="raca">
-                <p>RAÇA</p>
-            </div>
-            <div class="aparencia">
-                <p>APARENCIA</p>
-            </div>
-            <div class="equipamento">
-                <p>EQUIPAMENTO</p>
-            </div>
-            <div class="armadura">
-                <p>ARMADURA</p>
-            </div>
-            <div>
-                <p><a href="Ficha.html">VOLTAR</a></p>
-            </div>
+        
+            <section class="personagem" id="classesPersonalizacao">
+                <div>
+                    <p>BARBARO</p>
+                </div>
+                <div>
+                    <p>BARDO</p>
+                </div>
+                <div>
+                    <p>LADINO</p>
+                </div>
+                <div>
+                    <p>PALADINO</p>
+                </div>
+                <div>
+                    <p>DRUIDA</p>
+                </div>
 
-        </section> -->
+            </section>
+            <section class="personagem" id="racasPersonalizacao">
+                <div>
+                    <p>ELFO</p>
+                </div>
+                <div>
+                    <p>TIEFLING</p>
+                </div>
+                <div>
+                    <p>ANÃO</p>
+                </div>
+                <div>
+                    <p>MEIO ORC</p>
+                </div>
+                <div>
+                    <p>HUMANO</p>
+                </div>
+
+            </section>
+            <section class="personagem" id="aparenciaPersonalizacao">
+                <div>
+                    <p>PELE</p>
+                </div>
+                <div>
+                    <p>OLHOS</p>
+                </div>
+                <div>
+                    <p>CAMISA</p>
+                </div>
+                <div>
+                    <p>CALÇA</p>
+                </div>
+                <div>
+                    <p>CABELO</p>
+                </div>
+
+            </section>
+            <section class="personagem" id="equipamentoPersonalizacao">
+                <div>
+                    <p>ARMADURA</p>
+                </div>
+                <div>
+                    <p>ARMAS</p>
+                </div>
+                <div>
+                    <p>MAGIA</p>
+                </div>
+                <div>
+                    <p>FERRAMENTAS</p>
+                </div>
+                <div>
+                    <p>ITEM ALEATORIO</p>
+                </div>
+
+            </section>
+        
     </div>
     <script src="dados.js"></script>
     <script src="script.js"></script>
