--- a/Ficha3.html
+++ b/Ficha3.html
@@ -145,7 +145,7 @@
                     civilização, considerando-a uma fraqueza da humanidade. Se você busca lutar com ferocidade,
                     destruir seus
                     oponentes e nunca cair em combate, prepare-se para conhecer a classe que nasceu para você.</p>
-                <div class="botaoSelecao">
+                <div class="botaoSelecao" class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     para inspirar seus companheiros e até lançar uma magia de vez em quando, ter um bardo na sua
                     equipe
                     é de bastante interesse, visto que você nunca mais terá uma noite triste e sem musica.</p>
-                <div class="botaoSelecao">
+                <div class="botaoSelecao" class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     programador, é a melhor que se tem. Escolha o ladino, se não o espirito vingativo de Kallista
                     irá te
                     infernizar.</p>
-                <div class="botaoSelecao">
+                <div class="botaoSelecao" class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                     armas pesadas
                     que simbolizam sua devoção a Tehlu, sua armadura brilha a luz do sol, e traz a tona uma figura
                     divina.</p>
-                <div class="botaoSelecao">
+                <div class="botaoSelecao" class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                     todos
                     adoram um druida
                     doidão.</p>
-                <div class="botaoSelecao">
+                <div class="botaoSelecao" class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
