--- a/Ficha3.html
+++ b/Ficha3.html
@@ -56,7 +56,9 @@
                         d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z" />
                 </svg></div>
         </section>
-        <div class="imagem-personagem"></div>
+        <div id="imagem-personagem">
+            <img src="imgs-ficha3/H4.png">
+        </div>
 
         <section class="personagem" id="classesPersonalizacao">
             <div>
