--- a/Ficha3.html
+++ b/Ficha3.html
@@ -57,6 +57,7 @@
                 </svg></div>
         </section>
         <div id="imagem-personagem">
+            <div id="olhos"></div>
             <img src="imgs-ficha3/H4.png">
         </div>
 
@@ -327,10 +328,11 @@
                 </div>
             </div>
             <div class="itemGaleria" id="item-olhos">
-                <img src="imgs/Kallista.png">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
-                    hic, velit ullam consectetur molestiae deleniti tempore aspernatur illo fugit accusantium? Ipsam
-                    modi explicabo assumenda nam repellendus!</p>
+                <h2>Cores</h2>
+                <label>
+                    COR DOS OLHOS: 
+                </label>
+                <input id="inputOlhos" type="color">
                 <div class="botaoSelecao">
                     <p>SELECIONAR</p>
                 </div>
@@ -410,7 +412,6 @@
         </section>
 
     </div>
-    <script src="dados.js"></script>
     <script src="script.js"></script>
 </body>
 
