Atualizacao final(por enquanto)

--- a/Ficha3.html
+++ b/Ficha3.html
@@ -56,10 +56,21 @@
                         d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z" />
                 </svg></div>
         </section>
+        <div id="flecha-personagem-esquerda"><svg xmlns="http://www.w3.org/2000/svg" height="32px"
+            viewBox="0 -960 960 960" width="32px" fill="#fbf0c4">
+            <path
+                d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z" />
+        </svg></div>
         <div id="imagem-personagem">
             <div id="olhos"></div>
-            <img src="imgs-ficha3/H4.png">
+            <img src="imgs-ficha3/H3.png">
         </div>
+        <div id="flecha-personagem-direita"><svg xmlns="http://www.w3.org/2000/svg" height="32px"
+            viewBox="0 -960 960 960" width="32px" fill="#fbf0c4">
+            <path
+                d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z" />
+        </svg></div>
+
 
         <section class="personagem" id="classesPersonalizacao">
             <div>
@@ -148,7 +159,7 @@
                     civilização, considerando-a uma fraqueza da humanidade. Se você busca lutar com ferocidade,
                     destruir seus
                     oponentes e nunca cair em combate, prepare-se para conhecer a classe que nasceu para você.</p>
-                <div class="botaoSelecao" class="botaoSelecaoClasse">
+                <div class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -171,7 +182,7 @@
                     para inspirar seus companheiros e até lançar uma magia de vez em quando, ter um bardo na sua
                     equipe
                     é de bastante interesse, visto que você nunca mais terá uma noite triste e sem musica.</p>
-                <div class="botaoSelecao" class="botaoSelecaoClasse">
+                <div class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -197,7 +208,7 @@
                     programador, é a melhor que se tem. Escolha o ladino, se não o espirito vingativo de Kallista
                     irá te
                     infernizar.</p>
-                <div class="botaoSelecao" class="botaoSelecaoClasse">
+                <div class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -217,7 +228,7 @@
                     armas pesadas
                     que simbolizam sua devoção a Tehlu, sua armadura brilha a luz do sol, e traz a tona uma figura
                     divina.</p>
-                <div class="botaoSelecao" class="botaoSelecaoClasse">
+                <div class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -240,7 +251,7 @@
                     todos
                     adoram um druida
                     doidão.</p>
-                <div class="botaoSelecao" class="botaoSelecaoClasse">
+                <div class="botaoSelecaoClasse">
                     <p>SELECIONAR</p>
                 </div>
             </div>
@@ -339,27 +350,21 @@
             </div>
             <div class="itemGaleria" id="item-camisa">
                 <img src="imgs/Kallista.png">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
-                    hic, velit ullam consectetur molestiae deleniti tempore aspernatur illo fugit accusantium? Ipsam
-                    modi explicabo assumenda nam repellendus!</p>
+                <h2>Camisa</h2>
                 <div class="botaoSelecao">
                     <p>SELECIONAR</p>
                 </div>
             </div>
             <div class="itemGaleria" id="item-calça">
                 <img src="imgs/Kallista.png">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
-                    hic, velit ullam consectetur molestiae deleniti tempore aspernatur illo fugit accusantium? Ipsam
-                    modi explicabo assumenda nam repellendus!</p>
+                <h2>Calça</h2>
                 <div class="botaoSelecao">
                     <p>SELECIONAR</p>
                 </div>
             </div>
             <div class="itemGaleria" id="item-cabelo">
                 <img src="imgs/Kallista.png">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
-                    hic, velit ullam consectetur molestiae deleniti tempore aspernatur illo fugit accusantium? Ipsam
-                    modi explicabo assumenda nam repellendus!</p>
+                <h2>Cabelo</h2>
                 <div class="botaoSelecao">
                     <p>SELECIONAR</p>
                 </div>
