--- a/Ficha.html
+++ b/Ficha.html
@@ -78,33 +78,6 @@
             retira o menor valor e se somam os outros 3, fazemos isso 6 vezes e depois distribuimos eles entre as
             seguintes caracteristicas:
         </p>
-        <!-- <ul>
-            <li>Força: <p class="text-esquerda">VAM BORA QUE O MALUCO TA DOENTE!!! Realiza testes em que o mais
-                    importante é o tamanho do braço, barbaros,
-                    guerreiros e paladinos costumam ter este atributo como mais alto</p>
-            </li>
-            <li>Destreza: <p class="text-esquerda">SUMIU??? No caso em que tudo da errado sempre é bom ser rapido o
-                    bastante pra correr, esse atributo dita muitas coisas como a sua velocidade ou a facilidade para se
-                    esgueirar silenciosamente pela cidade, pequenos seres tem a destreza alta pois são rapidos e ageis
-                </p>
-            </li>
-            <li>Contituição: <p class="text-esquerda">Contituição nada mais é que o seu shape de mister olympia, se voce
-                    quer parecer uma geladeira eletrolux 4 portas deve aumentar esse atributo, grandes seres tem esse
-                    atributo elevado como meio-orcs, cavaleiros e bestas</p>
-            </li>
-            <li>Inteligencia: <p class="text-esquerda">Um deus da estrategia, você quer ser um ser superior aos outros,
-                    descobrir todos os enigmas primeiro que os outros (e ser completamente ignorado pelos outros) para
-                    isso devera ter a inteligencia como atributo principal</p>
-            </li>
-            <li>Sabedoria: <p class="text-esquerda">Um dia um sabio japonês me disse "お尻の奥深くまで突き刺さって白くてヌルヌルの極太チンコ" seres
-                    sabios geralmente são silenciosos e pensativos, costumam ser homens mais velhos, monges, e clerigos
-                    tem esse atributo como principal</p>
-            </li>
-            <li>Carisma: <p class="text-esquerda">Casada 😏??? Os reis das palavras tem esse atributo como principal,
-                    convencem a todos só na base da labia, ladinos, charlatões e trapaceiros tem esse atributo muito
-                    alto</p>
-            </li>
-        </ul> -->
 
 
         <p class="text-esquerda">Para definir o valor que vai ser somado nas rolagens de dados dos testes é definido
@@ -115,25 +88,12 @@
         <h1 class="title-center">Tipos de status:</h1>
         <div class="geral-status">
             <section class="status">
-                <div class="um">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Força">FORÇA</a>
-                </div>
-                <div class="dois">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Destreza">DESTREZA</a>
-                </div>
-                <div class="tres">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Constituição">CONSTITUIÇÃO</a>
-                </div>
-                <div class="quatro">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Inteligência">INTELIGÊNCIA</a>
-                </div>
-                <div class="cinco">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Sabedoria">SABEDORIA</a>
-                </div>
-                <div class="seis">
-                    <a href="https://dndbrasil.fandom.com/pt-br/wiki/Carisma">CARISMA</a>
-                </div>
-
+                <a class="um" href="https://dndbrasil.fandom.com/pt-br/wiki/Força">FORÇA</a>
+                <a class="dois" href="https://dndbrasil.fandom.com/pt-br/wiki/Destreza">DESTREZA</a>
+                <a class="tres" href="https://dndbrasil.fandom.com/pt-br/wiki/Constituição">CONSTITUIÇÃO</a>
+                <a class="quatro" href="https://dndbrasil.fandom.com/pt-br/wiki/Inteligência">INTELIGÊNCIA</a>
+                <a class="cinco" href="https://dndbrasil.fandom.com/pt-br/wiki/Sabedoria">SABEDORIA</a>
+                <a class="seis" href="https://dndbrasil.fandom.com/pt-br/wiki/Carisma">CARISMA</a>
             </section>
         </div>
 
@@ -152,7 +112,7 @@
             status. Em breve adcionaremos a opção de criação de ficha, enquanto isso, veja o video a baixo e começe a
             criar sua ficha.</p>
 
-            <iframe class="video" src="https://www.youtube.com/embed/k1E-PQPOk3c" height="330px" width="590px"></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/k1E-PQPOk3c" height="330px" width="590px"></iframe>
     </div>
 
     <a href="#topo-da-pagina" id="voltar-topo"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
