--- a/Ficha3.html
+++ b/Ficha3.html
@@ -27,9 +27,13 @@
 
 <body id="body-ficha3">
 
-
-
-    <!--Essa pagina sera incluida no Tp2 por falta de tempo-->
+    <section id="avisos">
+        <h2>AVISOS!!!</h2>
+        <p>Esta página ainda está em desenvolvimento. Todos os sprites são feitos manualmente, o que torna o trabalho mais desafiador. Até o momento, foram implementados os códigos para alterar o cabelo, as calças e as blusas. No entanto, a alteração da cor dos olhos está com um bug, e os sprites que representam as classes e raças ainda estão sendo desenhados. Estamos atualizando constantemente. Agradecemos a compreensão.</p>
+        <div id="botao-avisos">
+            <p>CONTINUAR</p>
+        </div>
+    </section>
 
     <div class="geral">
         <section class="escolhas">
@@ -70,7 +74,6 @@
             <path
                 d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z" />
         </svg></div>
-
 
         <section class="personagem" id="classesPersonalizacao">
             <div>
